--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="Verificacion_Static">Verificación:</string>
     <string name="Poliza_Static">Poliza de Seguro:</string>
     <string name="Vigencia_licencia">Vigencia de licencia:</string>
+    <string name="Entrega1">Entrega 1 - </string>
+    <string name="Entrega2">Entrega 2 - </string>
+    <string name="Entrega3">Entrega 3 - </string>
 
 </resources>
