Login Agregué funcionalidad al login Cuando se cierra la sesión, se guarda el nombre de usuario El nombre del usuario ahora se muestra en las pantallas El usuario predeterminado cambió a "Palencia" con la contrasena "123"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="Entrega1">Entrega 1 - </string>
     <string name="Entrega2">Entrega 2 - </string>
     <string name="Entrega3">Entrega 3 - </string>
+    <string name="str_LogOut">Cerrar Sesión</string>
 
 </resources>
