Inventario Modifiqué activity_inventario2.xml para que muestre los datos del socio y las cantidades que se van a recoger Agruegé un click on item para la lista de socios en Inventario.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,10 @@
     <string name="Menu">Menú</string>
     <string name="Finalizar">Finalizar</string>
     <string name="Confirmar">Confirmar</string>
+    <string name="str_abarrotes">Abarrotes</string>
+    <string name="str_fruta">Fruta y verdura</string>
+    <string name="str_pan">Pan</string>
+    <string name="str_nocomestible">No comestibles</string>
+    <string name="str_preparada">Comida preparada</string>
 
 </resources>
