Inventario El usuario ya puede ingresar las cantidades de los productos Cuando se confirma la carga, se muestra un cuadro de diálogo donde deberá confirmar Ya se conectó toda la línea de inventario, se actualiza el inventario interno y se regresa al manú principal
Entregas Inventario
Ya se muestra la cantidad de productos en el auto y se actualiza cada vez que se realiza una nueva carga

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="str_pan">Pan</string>
     <string name="str_nocomestible">No comestibles</string>
     <string name="str_preparada">Comida preparada</string>
+    <string name="strEnviar">Enviar</string>
 
 </resources>
