Creacion de opciones dentro de inventario InventarioOpciones.kt, implemente el registro InventarioEntregas.kt y el de InventarioEntregas2.kt y para entrega, deshabilite el boton back para el activity InventarioCompletado.kt. Hice el layout de almacen_layout.xml y la clase Almacenes.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="str_nocomestible">No comestibles</string>
     <string name="str_preparada">Comida preparada</string>
     <string name="strEnviar">Enviar</string>
+    <string name="Recoleccion">Recolección</string>
+    <string name="Entrega">Entrega</string>
 
 </resources>
